homelab/paperless-ngx/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless
  namespace: paperless
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`docs.k8s.hu.ls`) && PathPrefix(`/api`)
      kind: Rule
      priority: 20
      services:
        - name: paperless-web
          port: 80
    - match: Host(`docs.k8s.hu.ls`)
      kind: Rule
      priority: 10
      middlewares:
        - name: authentik
          namespace: authentik
      services:
        - name: paperless-web
          port: 80
  tls:
    secretName: wildcard-k8s-hu-ls-tls
